IDEA-257167 cryptic error message on start - don't localize plugin installation error — otherwise if some error ocured no way for user to decrypt message keys
GitOrigin-RevId: f455404dcd78c04e48f11c7672da8a045ae72729